# routes/web.php
@@ -480,7 +480,7 @@ Route::namespace('SalesProcess')->group(function () {
 
 
 // like
-Route::post('/like/{type}/{id}', [LikeController::class, 'toggle'])->name('like.toggle')->middleware(['auth', 'throttle:like',]);
+Route::post('/like/{type}/{id}', [LikeController::class, 'toggle'])->name('like.toggle')->middleware(['auth', 'throttle:like']);
 
 // content
 Route::view('/about', 'customer.pages.about')->name('customer.about');
